--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"ip":"the_repper_jack.aternos.me",
-	"port": 42967,
+	"port": 42967f,
 	"name": "yorha_32",
 	"auto-night-skip":"false",
 	"login-enabled":"true",
